--- a/project.css
+++ b/project.css
@@ -76,3 +76,22 @@ h3{
     color:black;
     background-color: white;
 }
+@media screen and (max-width: 500px) {
+    html{
+      font-size: 20px   
+    } 
+    body{
+        background-image: url(images/pattern-background-mobile.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-color:hsl(225, 100%, 98%);} 
+        font-family: 'Red Hat Display', sans-serif;
+        main{
+            height: 600px;
+            width: 400px;
+            margin-left: 35%;
+            margin-top: 60px;
+            background-color: rgb(255, 255, 255);
+            border-radius: 12px;
+        }
+}
